# djangopress

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.claude/: child-claude-md-template.md
.claude/skills/: add-app  create-briefing  deploy-site-railway  djangopress-architecture  generate-site  migrate-sites  sync-data  update-djangopress  update-site
ai/: models.py  services.py  site_generator.py  urls.py  views.py
ai/management/: __init__.py
ai/migrations/: 0001_initial.py  0003_delete_aigenerationsettings_delete_designreference.py  0005_aicalllog.py  (+2 more)
ai/utils/: diff_utils.py  (+3 more)
backoffice/: api_views.py  urls.py  views.py
briefings/: GUIDE.md  TEMPLATE.md  benchmark.md  centianes-boat-trip.md  checkin-faro.md  example-restaurant.md  windmill-restaurant.md
builder/: api_views.py  urls.py  views.py
config/: asgi.py  settings.py  storage_backends.py  urls.py  wsgi.py
core/: admin.py  context_processors.py  email.py  forms.py  middleware.py  mixins.py  models.py  signals.py  sitemaps.py  urls.py  utils.py  views.py
docs/: decoupled-app-reference.md
editor/: api_views.py  urls.py
editor_v2/: api_views.py  apps.py  urls.py
news/: admin.py  forms.py  models.py  public_views.py  urls.py  views.py
node/: package.json  tailwind.config.js
scripts/: benchmark_compare.py  benchmark_generate.py  migrate_to_package.sh  new_site.sh
site_assistant/: apps.py  models.py  prompts.py  router.py  services.py  urls.py  views.py
site_template/: .dockerignore  .env.example  Dockerfile  Procfile  db.sqlite3  litestream.yml  requirements.txt
templates/: 403.html  404.html  base.html
(+497 files in other folders)
